syntax = "proto3";

option go_package = ".;pb";
option java_multiple_files = true;
option java_package = "com.aapanavyapar.aapanavyapar.services";

import "sms-messages.proto";

service SmsSenderService {
  rpc ReadyToSendMessage (stream ReadyToSendMessageRequest) returns (stream ReadyToSendMessageResponse);
  rpc SendSms (SendSmsRequest) returns (SendSmsResponse);
  rpc AckToSms (AckToSmsRequest) returns (AckToSmsResponse);

}
